--- a/index.html
+++ b/index.html
@@ -55,8 +55,10 @@
           <div className="max-w-2xl mx-auto pt-24 px-6">
             {/* Header 部分 */}
             <header className="mb-12">
-              <h1 className="font-serif text-5xl mb-4 italic">Design with Kirsten.</h1>
-              <p className="text-secondary text-lg font-light tracking-wide">
+<h1 className="font-serif text-5xl mb-4 italic bg-clip-text text-transparent bg-gradient-to-r from-primary to-accent">
+  Design with Kirsten
+</h1>
+                <p className="text-secondary text-lg font-light tracking-wide">
                 UXUI Design <span className="mx-2">|</span> 
                 AI tips <span className="mx-2">|</span> 
                 Career Transition
