--- a/index.html
+++ b/index.html
@@ -1,94 +1,100 @@
 <!DOCTYPE html>
-<html lang="zh-Hant">
+<html lang="zh-Hant" class="scroll-smooth">
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Kirsten | UXUI & AI Tips</title>
+    <title>Design with Kirsten</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:ital,wght@0,400;0,600;1,400;1,600&display=swap" rel="stylesheet">
-    
+    <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
+    <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     <script>
       tailwind.config = {
         theme: {
           extend: {
-            fontFamily: {
-              sans: ['Inter', 'sans-serif'],
-              serif: ['Playfair Display', 'serif'],
-            },
             colors: {
-              primary: '#18181b',
-              secondary: '#71717a',
-              accent: '#2563eb', // 你可以之後改成你喜歡的藍或綠
-              background: '#fafafa',
+              glass: "rgba(255, 255, 255, 0.05)",
+              glassBorder: "rgba(255, 255, 255, 0.1)",
+              primary: "#6366f1", // Indigo
+              secondary: "#ec4899", // Pink
+            },
+            animation: {
+              'blob': 'blob 7s infinite',
+            },
+            keyframes: {
+              blob: {
+                '0%': { transform: 'translate(0px, 0px) scale(1)' },
+                '33%': { transform: 'translate(30px, -50px) scale(1.1)' },
+                '66%': { transform: 'translate(-20px, 20px) scale(0.9)' },
+                '100%': { transform: 'translate(0px, 0px) scale(1)' },
+              }
             }
-          }
-        }
+          },
+        },
       }
     </script>
-
     <style>
-      body {
-        background-image: linear-gradient(to right, rgba(0, 0, 0, 0.03) 1px, transparent 1px);
-        background-size: 40px 100%;
-      }
+      body { background-color: #020617; color: #f8fafc; overflow-x: hidden; }
       .glass-card {
-        background: rgba(255, 255, 255, 0.7);
-        backdrop-filter: blur(10px);
-        border: 1px solid rgba(228, 228, 231, 0.8);
+        background: rgba(255, 255, 255, 0.03);
+        backdrop-filter: blur(12px);
+        border: 1px solid rgba(255, 255, 255, 0.1);
       }
     </style>
-
-    <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
-    <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 </head>
-<body class="bg-[#fafafa] text-[#18181b] min-h-screen">
+<body>
     <div id="root"></div>
 
     <script type="text/babel">
-      const { useState } = React;
-
       function App() {
         return (
-          <div className="max-w-2xl mx-auto pt-24 px-6">
-            {/* Header 部分 */}
-            <header className="mb-12">
-<h1 className="font-serif text-5xl mb-4 italic bg-clip-text text-transparent bg-gradient-to-r from-primary to-accent">
-  Design with Kirsten
-</h1>
-                <p className="text-secondary text-lg font-light tracking-wide">
-                UXUI Design <span className="mx-2">|</span> 
-                AI tips <span className="mx-2">|</span> 
-                Career Transition
-              </p>
-            </header>
+          <div className="relative min-h-screen w-full flex items-center justify-center p-6">
+            {/* 背景動態光暈 Blobs */}
+            <div className="fixed top-0 -left-4 w-72 h-72 bg-primary rounded-full mix-blend-multiply filter blur-3xl opacity-20 animate-blob"></div>
+            <div className="fixed top-0 -right-4 w-72 h-72 bg-secondary rounded-full mix-blend-multiply filter blur-3xl opacity-20 animate-blob [animation-delay:2s]"></div>
+            <div className="fixed -bottom-8 left-20 w-72 h-72 bg-purple-500 rounded-full mix-blend-multiply filter blur-3xl opacity-20 animate-blob [animation-delay:4s]"></div>
 
-            {/* 按鈕區塊 */}
-            <div className="space-y-4">
-              <a 
-                href="https://www.instagram.com/kirsten_uxui/" 
-                target="_blank"
-                className="glass-card flex items-center justify-between p-5 rounded-xl hover:shadow-lg hover:border-accent transition-all duration-300 group"
-              >
-                <span className="font-medium text-primary">Case Study on Instagram</span>
-                <span className="text-secondary group-hover:text-accent">→</span>
-              </a>
+            <div className="relative z-10 w-full max-w-md">
+              <div className="glass-card rounded-3xl p-8 shadow-2xl">
+                {/* Header */}
+                <header className="text-center mb-10">
+                  <h1 className="text-4xl font-bold tracking-tight mb-3 bg-clip-text text-transparent bg-gradient-to-r from-white to-gray-400">
+                    Design with Kirsten
+                  </h1>
+                  <p className="text-gray-400 font-medium">
+                    UXUI Design | AI tips | Career Transition
+                  </p>
+                </header>
 
-              <a 
-                href="https://www.threads.com/@kirsten_uxui?xmt=AQF0VP2qPWbXL3S48S-jzUFX0cR4jd4JorQZwrdXA8pMFHE" 
-                target="_blank"
-                className="glass-card flex items-center justify-between p-5 rounded-xl hover:shadow-lg hover:border-accent transition-all duration-300 group"
-              >
-                <span className="font-medium text-primary">Articles on Threads</span>
-                <span className="text-secondary group-hover:text-accent">→</span>
-              </a>
+                {/* 按鈕列表 */}
+                <div className="space-y-4">
+                  <a 
+                    href="https://www.instagram.com/kirsten_uxui/" 
+                    target="_blank"
+                    className="flex items-center justify-between w-full p-4 rounded-2xl bg-white/5 border border-white/10 hover:bg-white/10 hover:border-primary/50 transition-all duration-300 group"
+                  >
+                    <span className="text-gray-200 group-hover:text-white transition-colors">Case Study on Instagram</span>
+                    <span className="text-gray-500 group-hover:translate-x-1 transition-transform">→</span>
+                  </a>
+
+                  <a 
+                    href="https://www.threads.com/@kirsten_uxui?xmt=AQF0VP2qPWbXL3S48S-jzUFX0cR4jd4JorQZwrdXA8pMFHE" 
+                    target="_blank"
+                    className="flex items-center justify-between w-full p-4 rounded-2xl bg-white/5 border border-white/10 hover:bg-white/10 hover:border-secondary/50 transition-all duration-300 group"
+                  >
+                    <span className="text-gray-200 group-hover:text-white transition-colors">Articles on Threads</span>
+                    <span className="text-gray-500 group-hover:translate-x-1 transition-transform">→</span>
+                  </a>
+                </div>
+
+                {/* Footer */}
+                <footer className="mt-12 text-center">
+                  <p className="text-xs text-gray-600 uppercase tracking-widest">
+                    Vibe Coding · 2025
+                  </p>
+                </footer>
+              </div>
             </div>
-
-            <footer className="mt-24 pb-12 text-xs text-secondary uppercase tracking-[0.2em]">
-              © 2025 Kirsten Yau · Vibe Coding Lab
-            </footer>
           </div>
         );
       }
