Update profile picture source in index.html

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
               {/* Profile Picture Placeholder */}
               <div className="w-32 h-32 rounded-full p-1 bg-gradient-to-tr from-primary to-secondary">
                 <div className="w-full h-full rounded-full bg-gray-800 overflow-hidden border-4 border-[#020617]">
-                  <img src="https://api.dicebear.com/7.x/avataaars/svg?seed=Kirsten" alt="Profile" className="w-full h-full object-cover" />
+                  <img src="https://kirstenyau.github.io/profile.JPG" alt="Profile" className="w-full h-full object-cover" />
                 </div>
               </div>
             </div>
