Implement PortfolioPage component in index.html
Added PortfolioPage component with project cards.

--- a/index.html
+++ b/index.html
@@ -106,21 +106,71 @@
         );
 
         return (
-          <div className="min-h-screen flex flex-col items-center justify-center p-6 pt-24">
-            <Navigation />
-            
-            {/* 動態背景 */}
-            <div className="fixed top-0 -left-4 w-96 h-96 bg-primary rounded-full mix-blend-multiply filter blur-[128px] opacity-10 animate-blob"></div>
-            <div className="fixed top-0 -right-4 w-96 h-96 bg-secondary rounded-full mix-blend-multiply filter blur-[128px] opacity-10 animate-blob [animation-delay:2s]"></div>
+         // ... (之前的代碼保持不變)
 
-            {currentPage === 'home' && <HomePage />}
-            {currentPage !== 'home' && (
-              <div className="z-10 text-center glass-card p-20 rounded-3xl">
-                <h2 className="text-3xl font-bold capitalize mb-4">{currentPage} Page</h2>
-                <p className="text-gray-500 mb-8">此頁面內容正在 Vibe Coding 中...</p>
-                <button onClick={() => setCurrentPage('home')} className="text-primary hover:underline">返回首頁</button>
+        // Portfolio 頁面組件
+        const PortfolioPage = () => (
+          <div className="relative z-10 w-full max-w-4xl mx-auto animate-fade-in">
+            <header className="text-left mb-12">
+              <h2 className="text-4xl font-bold tracking-tight mb-3 bg-clip-text text-transparent bg-gradient-to-r from-white to-gray-400">
+                Selected works
+              </h2>
+              <p className="text-gray-400 font-medium italic">
+                UXUI design works <span className="mx-2 text-gray-700">|</span> Vibe coding project
+              </p>
+            </header>
+
+            <div className="grid gap-6 md:grid-cols-2">
+              {/* 作品卡片 1: Vibe Coding Project */}
+              <div className="glass-card rounded-3xl p-6 flex flex-col justify-between hover:border-primary/50 transition-all duration-500 group">
+                <div>
+                  <div className="w-full h-40 rounded-2xl bg-gradient-to-br from-primary/20 to-secondary/20 mb-6 overflow-hidden flex items-center justify-center border border-white/5">
+                    <span className="text-4xl group-hover:scale-110 transition-transform duration-500">✨</span>
+                  </div>
+                  <h3 className="text-xl font-bold mb-2">Vibe Coding Project</h3>
+                  <p className="text-gray-400 text-sm mb-6 leading-relaxed">
+                    Personal portfolio website built with Vibe Coding philosophy. Focuses on minimal tech debt and maximum aesthetic vibe.
+                  </p>
+                </div>
+                <div className="flex items-center text-primary text-sm font-bold tracking-widest uppercase">
+                  (You are here)
+                </div>
               </div>
-            )}
+
+              {/* 作品卡片 2: News Aggregator App */}
+              <a 
+                href="https://www.behance.net/gallery/152258595/UX-UI-project-News-Aggregator-App" 
+                target="_blank"
+                className="glass-card rounded-3xl p-6 flex flex-col justify-between hover:bg-white/5 hover:border-secondary/50 transition-all duration-500 group"
+              >
+                <div>
+                  <div className="w-full h-40 rounded-2xl bg-gray-800/50 mb-6 overflow-hidden border border-white/5">
+                    {/* 這裡之後你可以換成 Behance 的封面圖 */}
+                    <div className="w-full h-full bg-gradient-to-tr from-secondary/10 to-purple-500/10 flex items-center justify-center">
+                        <span className="text-4xl group-hover:scale-110 transition-transform duration-500">📰</span>
+                    </div>
+                  </div>
+                  <h3 className="text-xl font-bold mb-2">News Aggregator App</h3>
+                  <p className="text-gray-400 text-sm mb-6 leading-relaxed">
+                    A comprehensive UXUI design project focusing on information architecture and user reading habits.
+                  </p>
+                </div>
+                <div className="flex items-center text-secondary text-sm font-bold tracking-widest uppercase group-hover:translate-x-2 transition-transform">
+                  View Case Study →
+                </div>
+              </a>
+            </div>
+
+            <button 
+              onClick={() => setCurrentPage('home')} 
+              className="mt-12 text-sm text-gray-500 hover:text-white transition-colors"
+            >
+              ← Back to Home
+            </button>
+          </div>
+        );
+
+// ... (最後在 App 的 return 部分確保調用了 {currentPage === 'portfolio' && <PortfolioPage />})
 
             <footer className="mt-20 text-xs text-gray-600 tracking-widest uppercase">
               Kirsten Yau · 2025
